# ufs-dump

./: .gitignore  Cargo.toml  Makefile  README.md
rufs/: Cargo.toml
rufs/src/: blockreader.rs  data.rs  inode.rs  lib.rs
rufs/src/ufs/: dir.rs  mod.rs  symlink.rs  xattr.rs
ufs-dump/: Cargo.toml
ufs-dump/src/: cli.rs  main.rs  reader.rs
