[workspace]
members = [
	"rufs",
	"ufs-dump",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.83"
bincode = "2.0.1"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
libc = "0.2.176"
log = "0.4.22"
rufs = { version = "0.6.0", path = "rufs" }
